--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <div class="portfolio-wrap">
   <div class="portfolio">
-    <div class="card-container" id="card">
+    <!-- <div class="card-container" id="card">
       <div class="card-face front">
         <img src="https://i.pravatar.cc/150?img=7" alt="Profile" />
         <h2>Jane Doe</h2>
@@ -26,7 +26,17 @@
       <div class="card-face back">
         <p>Contact: jane@example.com</p>
       </div>
+    </div> -->
+    <div class="icon-cards">
+      <div class="icon-cards__content">
+        <div class="icon-cards__item"><div class="icon-cards__inner"></div></div>
+        <div class="icon-cards__item"><div class="icon-cards__inner"></div></div>
+        <div class="icon-cards__item"><div class="icon-cards__inner"></div></div>
+        <div class="icon-cards__item"><div class="icon-cards__inner"></div></div>
+        <div class="icon-cards__item"><div class="icon-cards__inner"></div></div>
+      </div>
     </div>
+    
   </div>
     <div id="terminal"></div>
   </div>
